# fastquat

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  development.md  index.md  installation.md  quickstart.md
docs/source/api/: quaternion.md
docs/source/examples/: 1-spherical-cap.ipynb  2-slerp-animation.ipynb  spherical_cap.ipynb
docs/source/user-guide/: getting-started.ipynb  installation.md  tutorial-rotations.ipynb  tutorial-slerp.ipynb
src/fastquat/: __init__.py  quaternion.py
tests/: conftest.py  test_base.py  test_math.py  test_pow.py  test_rotation.py  test_tensor.py
