[project]
name = "FastQuat"
dynamic = ['version']
description = "High-performance quaternions with JAX support"
authors = [{name = "Pierre Chanial", email = "chanial@apc.in2p3.fr"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib",
    'typing-extensions; python_version < "3.11"',
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = 'https://fastquat.readthedocs.io'
repository = 'https://github.com/CMBSciPol/fastquat'

[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'

[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.4",
]
dev = [
    {include-group = "docs"},
    "ipython>=8.18.1",
    "pytest>=9.0",
    "pytest-notebook>=0.10",
    "visu-hlo",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
]

[tool.hatch.version]
source = 'vcs'

[tool.pytest]
nb_test_files = true
nb_diff_ignore = [
    '/cells/*/execution_count',
    '/cells/*/outputs',
    '/metadata/language_info/version',
]
filterwarnings = [
    'ignore::pytest.PytestRemovedIn9Warning',
]

[tool.ruff]
line-length = 100
fix = true           # autofix issues
force-exclude = true # useful with ruff-pre-commit plugin
src = ['src', 'tests']

[tool.ruff.lint]
select = [
    'E',      # pycodestyle-errors
    'F',      # pyflakes
    'I',      # isort
    'UP',     # pyupgrade
    'T10',    # flake8-debugger
]

[tool.ruff.format]
quote-style = 'single'

[tool.uv]
cache-keys = [{ git = true }]
